Added support paging and filtering contract Web UI Added Creator Steam ID to the contract Web UI Added styling to the contract Web UI Added support for singleplayer scores Changed server port from 80 to 40147 to prevent issues for most users Fixed issue where Web UI wouldn't show any contracts Fixed exploit where self-made contracts could be replayed and earn you too much money

--- a/Bin/Hook/hook.ini
+++ b/Bin/Hook/hook.ini
@@ -6,8 +6,8 @@ log=true
 game=hm5
 
 [hm5]
-webserviceurl=http://localhost/hm5
+webserviceurl=http://localhost:40147/hm5
 skiplauncher=true
 
 [sniper]
-webserviceurl=http://localhost/sniper
+webserviceurl=http://localhost:40147/sniper
