--- a/Src/HM5.Server/HM5.Server.csproj
+++ b/Src/HM5.Server/HM5.Server.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Content Remove="Contracts\**" />
     <None Remove="Logs\**" />
+    <Content Remove="userprofile.json" />
   </ItemGroup>
 
 </Project>
