--- a/Src/HM5.Hook/hook.ini
+++ b/Src/HM5.Hook/hook.ini
@@ -6,8 +6,8 @@ log=true
 game=hm5
 
 [hm5]
-webserviceurl=http://localhost/hm5
+webserviceurl=http://localhost:40147/hm5
 skiplauncher=true
 
 [sniper]
-webserviceurl=http://localhost/sniper
+webserviceurl=http://localhost:40147/sniper
